# buba

./: .gitignore  Application.vala  Command.vala  Main.vala  README.md  Window.vala  buba  buba.vala  budgiebackup.sh  budgiegackup.sh  budgierestore.sh  meson.build  setup.py
buba/: buba.py  command.py  fileio.py  window.py
src/: buba.c  command.h  window.h
